--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "typescript": "^4.6.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npx webpack",
+    "build": "tsc",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "dev": "webpack-dev-server"
@@ -48,6 +49,7 @@
     "css-loader": "5.0.1",
     "html-webpack-plugin": "^4.5.0",
     "style-loader": "^2.0.0",
+    "ts-loader": "^8.2.0",
     "url-loader": "^4.1.1",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
