--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.12",
+    "esbuild": "^0.14.36",
+    "large-number-hm": "^1.0.1",
+    "lib-flexible": "^0.3.2",
+    "loadsh": "^0.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -14,10 +20,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "tsc",
+    "build": "webpack",
+    "watch": "webpack --watch",
+    "esbuild": "esbuild src/index.js --bundle --minify --loader:.js=jsx --loader:.svg=dataurl --outfile=dist/bundle.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server --inline --open --host localhost ",
+    "t": "node ./test.js"
   },
   "eslintConfig": {
     "extends": [
@@ -40,13 +49,18 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.40",
     "@babel/core": "^7.1.0",
+    "@babel/eslint-parser": "^7.18.2",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-decorators": "^7.17.2",
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.16.10",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-es2015": "^7.0.0-beta.53",
-    "@babel/preset-react": "^7.0.0-beta.40",
+    "@babel/preset-react": "^7.17.12",
+    "autoprefixer": "^9.5.1",
+    "axios": "^0.27.2",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.0-beta.0",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-lodash": "^3.3.2",
@@ -55,7 +69,27 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.3.2",
     "css-loader": "5.0.1",
+    "cssnano": "^4.1.10",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-alloy": "^4.4.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "file-loader": "^6.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
+    "glob": "^7.1.4",
+    "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^4.5.0",
+    "less": "^4.1.2",
+    "less-loader": "7.3.0",
+    "mini-css-extract-plugin": "^1.0.0",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "postcss-loader": "^3.0.0",
+    "px2rem-loader": "^0.1.9",
+    "raw-loader": "^0.5.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.2.0",
     "tsconfig-paths-webpack-plugin": "^3.5.2",
