--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "allowJs": true,
     "outDir": "dist",
     "baseUrl": ".",
+    "noImplicitAny":false,
+    "strict": false,
+    "sourceMap": true,
     "paths": {
       "@components/*": ["./src/components/*"],
       "@page/*": ["./src/page/*"]
