--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.12",
+    "dotenv": "^16.0.1",
     "esbuild": "^0.14.36",
     "large-number-hm": "^1.0.1",
     "lib-flexible": "^0.3.2",
@@ -95,6 +96,7 @@
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "url-loader": "^4.1.1",
     "webpack": "4.44.2",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
