--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.17.12",
+    "@chanjet/encryption": "./chanjet-encryption-v1.0.14.tgz",
     "autoprefixer": "^9.5.1",
     "axios": "^0.27.2",
     "babel-eslint": "^10.1.0",
@@ -84,11 +85,13 @@
     "glob": "^7.1.4",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^4.5.0",
+    "image-webpack-loader": "^7.0.0",
     "less": "^4.1.2",
     "less-loader": "7.3.0",
     "mini-css-extract-plugin": "^1.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-loader": "^3.0.0",
+    "purgecss-webpack-plugin": "^4.1.3",
     "px2rem-loader": "^0.1.9",
     "raw-loader": "^0.5.1",
     "style-loader": "^2.0.0",
